--- a/portfolio/CSA/app/css/home.css
+++ b/portfolio/CSA/app/css/home.css
@@ -4,6 +4,7 @@
           background-size: cover; }
   #home_page .container .content {
     height: 100vh;
+    min-height: 644px;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -13,7 +14,8 @@
         -ms-flex-align: center;
             align-items: center;
     position: relative; }
-    #home_page .container .content .arrow_left1, #home_page .container .content .arrow_right1 {
+    #home_page .container .content .arrow_left1,
+    #home_page .container .content .arrow_right1 {
       position: absolute;
       display: block;
       cursor: pointer;
@@ -59,6 +61,8 @@
       -webkit-justify-content: center;
           -ms-flex-pack: center;
               justify-content: center; }
+      #home_page .container .content .slider1 .slick-list {
+        margin: 0 15px; }
       #home_page .container .content .slider1 .slick-track {
         display: -webkit-box;
         display: -webkit-flex;
@@ -84,8 +88,8 @@
       #home_page .container .content .slider1 .slide_logo .img {
         display: block;
         margin: 0 auto;
-        height: 400px;
-        width: 400px;
+        height: 40em;
+        width: 40em;
         background: url(../img/logo_img.svg);
         -webkit-background-size: contain;
                 background-size: contain; }
@@ -105,7 +109,7 @@
                 justify-content: center; }
         #home_page .container .content .slider1 .slide1 .block_container_first .block {
           width: 20%;
-          margin: 0 50px; }
+          margin: 0 5em; }
           #home_page .container .content .slider1 .slide1 .block_container_first .block h3 {
             font: 1.4em "HelveticaNeueCyrMedium";
             color: #f4ea48;
@@ -138,7 +142,7 @@
                 justify-content: center; }
         #home_page .container .content .slider1 .slide1 .block_container_second .block {
           width: 13%;
-          margin: 0 25px; }
+          margin: 0 2.5em; }
           #home_page .container .content .slider1 .slide1 .block_container_second .block .number_block {
             font: 3.6em "HelveticaNeueCyrBold";
             text-align: center;
@@ -151,7 +155,7 @@
       #home_page .container .content .slider1 .slide1 .line {
         display: block;
         margin: 0 auto;
-        width: 125px;
+        width: 12.5em;
         height: 3px;
         background-color: #f4ea48; }
       #home_page .container .content .slider1 .slide1 h4 {
@@ -165,7 +169,7 @@
         text-align: center;
         margin: 0;
         display: block;
-        max-width: 860px;
+        padding: 0 1em;
         margin: 0 auto; }
       #home_page .container .content .slider1 .slide2 .block_container {
         display: -webkit-box;
@@ -216,10 +220,10 @@
                 justify-content: center;
         padding-top: 3em; }
         #home_page .container .content .slider1 .slide3 .block_container .block {
-          margin: 0 30px; }
+          margin: 0 3em; }
           #home_page .container .content .slider1 .slide3 .block_container .block img {
-            width: 88px;
-            height: 88px; }
+            width: 8.8em;
+            height: 8.8em; }
           #home_page .container .content .slider1 .slide3 .block_container .block p {
             font: 1.5em "HelveticaNeueCyrBold";
             color: #fff;
@@ -231,7 +235,7 @@
       #home_page .container .content .slider1 .slide3 .line {
         display: block;
         height: 3px;
-        width: 120px;
+        width: 12em;
         background-color: #f4ea48;
         margin: 0 auto; }
       #home_page .container .content .slider1 .slide3 h4 {
@@ -250,7 +254,7 @@
         -webkit-justify-content: space-between;
             -ms-flex-pack: justify;
                 justify-content: space-between;
-        margin-top: 50px; }
+        margin-top: 5em; }
         #home_page .container .content .slider1 .slide4 .container_block .block_left,
         #home_page .container .content .slider1 .slide4 .container_block .block_right {
           width: 25%; }
@@ -275,16 +279,16 @@
           width: 100%;
           height: auto;
           display: block;
-          -webkit-transform: translateX(-22px);
-              -ms-transform: translateX(-22px);
-                  transform: translateX(-22px); }
+          -webkit-transform: translateX(-2.2em);
+              -ms-transform: translateX(-2.2em);
+                  transform: translateX(-2.2em); }
       #home_page .container .content .slider1 .slide4 .line {
         display: block;
         height: 3px;
-        width: 120px;
+        width: 12em;
         background-color: #f4ea48;
         margin: 0 auto;
-        margin-top: 30px; }
+        margin-top: 3em; }
       #home_page .container .content .slider1 .slide4 h4 {
         font: 2.4em "HelveticaNeueCyrBold";
         color: #f4ea48;
@@ -305,9 +309,12 @@
         -webkit-align-items: center;
             -ms-flex-align: center;
                 align-items: center;
-        margin-top: 40px; }
+        margin-top: 4em; }
         #home_page .container .content .slider1 .slide5 .block_container .block {
-          margin: 0 50px; }
+          margin: 0 5em; }
+          #home_page .container .content .slider1 .slide5 .block_container .block img {
+            width: 100%;
+            height: auto; }
       #home_page .container .content .slider1 .slide5 .desc {
         font: 2.4em "HelveticaNeueCyrRoman";
         color: #fff;
@@ -315,10 +322,10 @@
       #home_page .container .content .slider1 .slide5 .line {
         display: block;
         height: 3px;
-        width: 120px;
+        width: 12em;
         background-color: #f4ea48;
         margin: 0 auto;
-        margin-top: 30px; }
+        margin-top: 3em; }
       #home_page .container .content .slider1 .slide5 h4 {
         font: 2.4em "HelveticaNeueCyrBold";
         color: #f4ea48;
@@ -345,13 +352,13 @@
                 justify-content: center; }
         #home_page .container .content .slider1 .slide6 .block_container .block {
           width: 20%;
-          margin: 0 40px; }
+          margin: 0 4em; }
           #home_page .container .content .slider1 .slide6 .block_container .block .title {
             font: 3.6em "HelveticaNeueCyrBold";
             color: #f4ea48;
             text-align: center;
             margin: 0;
-            padding-top: 20px; }
+            padding-top: 2em; }
           #home_page .container .content .slider1 .slide6 .block_container .block .txt {
             font: 1.4em "HelveticaNeueCyrMedium";
             color: #fff;
@@ -359,10 +366,10 @@
       #home_page .container .content .slider1 .slide6 .line {
         display: block;
         height: 3px;
-        width: 120px;
+        width: 12em;
         background-color: #f4ea48;
         margin: 0 auto;
-        margin-top: 40px; }
+        margin-top: 4em; }
       #home_page .container .content .slider1 .slide6 h4 {
         font: 2.4em "HelveticaNeueCyrBold";
         color: #f4ea48;
@@ -371,7 +378,225 @@
         margin-bottom: 0;
         line-height: 130%; }
 
-@media screen and (max-width: 1022px) {
+@media screen and (max-width: 1480px) {
+  #home_page .container .content .slider1 {
+    font-size: 8px; }
+  #home_page .container .content {
+    min-height: 500px; } }
+
+@media screen and (max-width: 1025px) {
   #home_page,
   #start_page {
-    display: block !important; } }
+    display: block !important; }
+  #home_page .container .content .slider1 .slide2 .block_container .top {
+    font-size: 3em; }
+  #home_page .container .content .slider1 .slide5 .block_container {
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+  #home_page .container .content .slider1 .slide5 .block_container .block {
+    margin: 0;
+    width: 25%; }
+  #home_page .container .content .arrow_right1 span,
+  #home_page .container .content .arrow_left1 span {
+    font-size: 1.6em;
+    top: 0.85em; } }
+
+@media screen and (max-width: 808px) {
+  #home_page .container .content .arrow_right1 span,
+  #home_page .container .content .arrow_left1 span {
+    display: none !important; }
+  #home_page .container .content .slider1 .slide1 .block_container_first {
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+  #home_page .container .content .slider1 .slide1 .block_container_first .block {
+    width: 25%;
+    margin: 0; }
+  #home_page .container .content {
+    min-height: 624px; }
+  .slick-track {
+    display: block !important; }
+  #home_page .container .content {
+    height: auto;
+    min-height: 400px;
+    padding-top: 50px;
+    padding-bottom: 80px; }
+  #home_page .container .content .slider1 .slide1 .block_container_second {
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+  #home_page .container .content .slider1 .slide1 .block_container_second .block {
+    margin: 0;
+    width: 18%; }
+  #home_page .container .content .slider1 .slide1 .block_container_second .block .txt {
+    font-size: 1.7em;
+    text-align: center; }
+  #home_page .container .content .slider1 .slide1 .block_container_first .block p {
+    font-size: 1.7em; }
+  #home_page .container .content .slider1 .slide1 .adress {
+    line-height: 150%; }
+  #home_page .container .content .slider1 .slide2 .block_container .block {
+    width: 30%; }
+  #home_page .container .content .slider1 .slide3 .block_container .block {
+    margin: 0; }
+  #home_page .container .content .slider1 .slide3 .block_container {
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+  #home_page .container .content .slider1 .slide4 .container_block {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: row wrap;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+  #home_page .container .content .slider1 .slide4 .block_center {
+    width: 80%;
+    -webkit-box-ordinal-group: 2;
+    -webkit-order: 1;
+        -ms-flex-order: 1;
+            order: 1;
+    margin-bottom: 30px; }
+  #home_page .container .content .slider1 .slide4 .container_block .block_left,
+  #home_page .container .content .slider1 .slide4 .container_block .block_right {
+    width: 45%; }
+  #home_page .container .content .slider1 .slide4 .container_block .block_left {
+    -webkit-box-ordinal-group: 3;
+    -webkit-order: 2;
+        -ms-flex-order: 2;
+            order: 2; }
+  #home_page .container .content .slider1 .slide4 .container_block .block_right {
+    -webkit-box-ordinal-group: 4;
+    -webkit-order: 3;
+        -ms-flex-order: 3;
+            order: 3; }
+  #home_page .container .content .slider1 .slide6 .block_container .block {
+    margin: 0;
+    width: 30%; }
+  #home_page .container .content .slider1 .slide6 .block_container {
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between; } }
+
+@media screen and (max-width: 600px) {
+  #home_page .container .content .arrow_right1 {
+    right: 0; }
+  #home_page .container .content .arrow_left1 {
+    left: 0; }
+  #home_page .container .content .slider1 {
+    padding: 0 30px; }
+  #home_page .container .content .slider1 .slide1 .block_container_first {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  #home_page .container .content .slider1 .slide1 .block_container_first .block {
+    width: 100%; }
+  #home_page .container .content .slider1 .slide1 .block_container_first .block p {
+    font-size: 2em; }
+  .slick-dots {
+    width: 80%;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%); }
+  #home_page .container .content .slider1 .slide1 .block_container_second {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: row wrap;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+  #home_page .container .content .slider1 .slide1 .block_container_second .block {
+    width: 45%; }
+  #home_page .container .content .slider1 .slide1 .line {
+    margin-top: 20px; }
+  #home_page .container .content .slider1 .slide2 .desc {
+    font-size: 2.4em;
+    padding: 0; }
+  #home_page .container .content .slider1 .slide2 .block_container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  #home_page .container .content .slider1 .slide2 .block_container .bottom {
+    font-size: 1.6em;
+    padding-bottom: 0; }
+  #home_page .container .content .slider1 .slide2 .block_container .block {
+    width: 100%; }
+  #home_page .container .content .slider1 .slide2 .line {
+    margin-top: 20px; }
+  #home_page .container .content .slider1 .slide3 .block_container {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: row wrap;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+  #home_page .container .content .slider1 .slide3 .block_container .block {
+    width: 33%; }
+  #home_page .container .content .slider1 .slide3 .block_container .block img {
+    display: block;
+    margin: 0 auto; }
+  #home_page .container .content .slider1 .slide h2 {
+    font-size: 1.8em; }
+  #home_page .container .content .slider1 .slide4 .container_block .block_left,
+  #home_page .container .content .slider1 .slide4 .container_block .block_right {
+    width: 100%; }
+  #home_page .container .content .slider1 .slide6 .block_container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  #home_page .container .content .slider1 .slide6 .block_container .block {
+    width: 100%; }
+  #home_page .container .content .slider1 .slide4 .container_block .block_left .title, #home_page .container .content .slider1 .slide4 .container_block .block_right .title {
+    font-size: 1.6em; }
+  #home_page .container .content .slider1 .slide6 .block_container .block .txt {
+    font-size: 1.6em; }
+  #home_page .container .content .slider1 .slide6 .block_container .block .title {
+    padding-top: 1em; } }
+
+@media screen and (max-width: 480px) {
+  #home_page .container .content .arrow_right1,
+  #home_page .container .content .arrow_left1 {
+    display: none !important; }
+  #home_page .container .content .slider1 {
+    padding: 0; }
+  #home_page .container .content .slider1 .slide_logo .img {
+    width: 28em;
+    height: 28em; }
+  #home_page .container .content .slider1 .slide1 .block_container_second .block {
+    width: 100%; }
+  #home_page .container .content .slider1 .slide1 .block_container_second .block .txt {
+    font-size: 2em; } }
