--- a/portfolio/CSA/app/css/libs.css
+++ b/portfolio/CSA/app/css/libs.css
@@ -321,7 +321,7 @@ template {
   position: relative;
   overflow: hidden;
   display: block;
-  margin: 0 -7px;
+  margin: 0;
   padding: 0; }
   .slick-list:focus {
     outline: none; }
@@ -418,14 +418,14 @@ template {
       opacity: 1; }
   .slick-prev.slick-disabled:before,
   .slick-next.slick-disabled:before {
-    opacity: 0.25; }
+    opacity: 1; }
   .slick-prev:before,
   .slick-next:before {
     font-family: "slick";
     font-size: 20px;
     line-height: 1;
     color: white;
-    opacity: 0.75;
+    opacity: 1;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale; }
 
@@ -455,7 +455,7 @@ template {
 
 .slick-dots {
   position: absolute;
-  bottom: -25px;
+  bottom: -8em;
   list-style: none;
   display: block;
   text-align: center;
@@ -474,8 +474,8 @@ template {
       border: 0;
       background: transparent;
       display: block;
-      height: 20px;
-      width: 20px;
+      height: 16px;
+      width: 16px;
       outline: none;
       line-height: 0px;
       font-size: 0px;
@@ -490,17 +490,19 @@ template {
         position: absolute;
         top: 0;
         left: 0;
-        content: "•";
-        width: 20px;
-        height: 20px;
+        content: "";
+        width: 16px;
+        height: 16px;
+        -webkit-border-radius: 8px;
+                border-radius: 8px;
         font-family: "slick";
         font-size: 6px;
         line-height: 20px;
         text-align: center;
-        color: black;
-        opacity: 0.25;
+        background: #fff;
+        opacity: 1;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale; }
     .slick-dots li.slick-active button:before {
-      color: black;
-      opacity: 0.75; }
+      background: #f4ea48;
+      opacity: 1; }
