--- a/portfolio/CSA/app/css/start.css
+++ b/portfolio/CSA/app/css/start.css
@@ -17,8 +17,8 @@
             justify-content: center;
     overflow-x: hidden; }
   #start_page .block_logo {
-    width: 400px;
-    height: 400px; }
+    width: 40em;
+    height: 40em; }
     #start_page .block_logo .logo_content {
       position: relative;
       height: 100%;
@@ -57,6 +57,17 @@
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg); } }
 
-@media screen and (max-width: 1022px) {
+@media screen and (max-width: 1480px) {
+  #start_page .block_logo {
+    font-size: 8px; }
+  #start_page .container {
+    min-height: 500px; } }
+
+@media screen and (max-width: 1025px) {
   #start_page .container {
     min-height: 568px; } }
+
+@media screen and (max-width: 480px) {
+  #start_page .block_logo {
+    width: 28em;
+    height: 28em; } }
