--- a/portfolio/CSA/app/libs/slick-1.8.1/slick/slick-theme.scss
+++ b/portfolio/CSA/app/libs/slick-1.8.1/slick/slick-theme.scss
@@ -11,15 +11,15 @@ $slick-font-path: "./fonts/" !default;
 $slick-font-family: "slick" !default;
 $slick-loader-path: "./" !default;
 $slick-arrow-color: white !default;
-$slick-dot-color: black !default;
-$slick-dot-color-active: $slick-dot-color !default;
+$slick-dot-color: #fff;
+$slick-dot-color-active: #f4ea48;
 $slick-prev-character: "\2190" !default;
 $slick-next-character: "\2192" !default;
 $slick-dot-character: "\2022" !default;
 $slick-dot-size: 6px !default;
-$slick-opacity-default: 0.75 !default;
+$slick-opacity-default: 1;
 $slick-opacity-on-hover: 1 !default;
-$slick-opacity-not-active: 0.25 !default;
+$slick-opacity-not-active: 1;
 
 @function slick-image-url($url) {
     @if function-exists(image-url) {
@@ -136,7 +136,7 @@ $slick-opacity-not-active: 0.25 !default;
 
 .slick-dots {
     position: absolute;
-    bottom: -25px;
+    bottom: -8em;
     list-style: none;
     display: block;
     text-align: center;
@@ -155,8 +155,8 @@ $slick-opacity-not-active: 0.25 !default;
             border: 0;
             background: transparent;
             display: block;
-            height: 20px;
-            width: 20px;
+            height: 16px;
+            width: 16px;
             outline: none;
             line-height: 0px;
             font-size: 0px;
@@ -173,21 +173,22 @@ $slick-opacity-not-active: 0.25 !default;
                 position: absolute;
                 top: 0;
                 left: 0;
-                content: $slick-dot-character;
-                width: 20px;
-                height: 20px;
+                content: "";
+                width: 16px;
+                height: 16px;
+                border-radius: 8px;
                 font-family: $slick-font-family;
                 font-size: $slick-dot-size;
                 line-height: 20px;
                 text-align: center;
-                color: $slick-dot-color;
+                background: $slick-dot-color;
                 opacity: $slick-opacity-not-active;
                 -webkit-font-smoothing: antialiased;
                 -moz-osx-font-smoothing: grayscale;
             }
         }
         &.slick-active button:before {
-            color: $slick-dot-color-active;
+            background: $slick-dot-color-active;
             opacity: $slick-opacity-default;
         }
     }
