--- a/portfolio/CSA/app/libs/slick-1.8.1/slick/slick.scss
+++ b/portfolio/CSA/app/libs/slick-1.8.1/slick/slick.scss
@@ -18,7 +18,7 @@
     position: relative;
     overflow: hidden;
     display: block;
-    margin: 0 -7px;
+    margin: 0;
     padding: 0;
 
     &:focus {
