--- a/portfolio/CSA/app/scss/_media.scss
+++ b/portfolio/CSA/app/scss/_media.scss
@@ -1,5 +1,5 @@
 // ≥1200px
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1240px) {
     .container {
         max-width: 992px;
     }
@@ -12,7 +12,7 @@
 }
 
 // ≥992px
-@media screen and (max-width: 1022px) {
+@media screen and (max-width: 1025px) {
     .container {
         max-width: 768px;
     }
@@ -48,11 +48,13 @@
 }
 
 // ≥768px
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 808px) {
     .container {
         max-width: 568px;
     }
 }
 
 // ≥576px
-@media screen and (max-width: 576px) {}
+@media screen and (max-width: 600px) {
+
+}
