--- a/portfolio/CSA/app/css/common.css
+++ b/portfolio/CSA/app/css/common.css
@@ -79,7 +79,8 @@ body {
           box-sizing: border-box; }
 
 #wrapper {
-  position: relative; }
+  position: relative;
+  height: 100vh; }
 
 .nav-btn {
   display: none;
