--- a/portfolio/CSA/app/css/start.css
+++ b/portfolio/CSA/app/css/start.css
@@ -1,24 +1,47 @@
+body {
+  overflow: hidden; }
+
+.active {
+  height: 0% !important;
+  width: 0% !important;
+  -webkit-border-radius: 100% !important;
+          border-radius: 100% !important; }
+
 #start_page {
   background: #f4ea48;
-  position: relative; }
-  #start_page .container {
-    height: 100vh;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    overflow-x: hidden; }
+  overflow: hidden;
+  -webkit-transition: 0.3s linear;
+  -o-transition: 0.3s linear;
+  transition: 0.3s linear;
+  margin-top: -1px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  -webkit-border-radius: 0;
+          border-radius: 0;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%); }
+  #start_page .content {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%; }
   #start_page .block_logo {
     width: 40em;
-    height: 40em; }
+    height: 40em;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-left: -20em;
+    margin-top: -20em; }
     #start_page .block_logo .logo_content {
       position: relative;
       height: 100%;
