--- a/portfolio/CSA/app/scss/start.scss
+++ b/portfolio/CSA/app/scss/start.scss
@@ -1,16 +1,39 @@
+body {
+    overflow: hidden;
+}
+.active {
+    height: 0% !important;
+    width: 0% !important;
+    border-radius: 100% !important;
+}
 #start_page {
     background: #f4ea48;
-    position: relative;
-    .container {
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        overflow-x: hidden;
+    overflow: hidden;
+    transition: 0.3s linear;
+    margin-top: -1px;
+    display: flex;
+    position: absolute;
+    z-index: 2;
+    width: 100%;
+    border-radius: 0;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    .content {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
     }
     .block_logo {
         width: 40em;
         height: 40em;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        margin-left: -20em;
+        margin-top: -20em;
         .logo_content {
                position: relative;
                height: 100%;
