--- a/portfolio/CSA/app/scss/_media.scss
+++ b/portfolio/CSA/app/scss/_media.scss
@@ -13,6 +13,9 @@
 
 // ≥992px
 @media screen and (max-width: 1025px) {
+	body {
+		overflow: auto !important;
+	}
     .container {
         max-width: 768px;
     }
