--- a/portfolio/CSA/app/css/common.css
+++ b/portfolio/CSA/app/css/common.css
@@ -452,6 +452,8 @@ body {
     width: 550px; } }
 
 @media screen and (max-width: 1025px) {
+  body {
+    overflow: auto !important; }
   .container {
     max-width: 768px; }
   #header_top {
