--- a/portfolio/CSA/app/css/start.css
+++ b/portfolio/CSA/app/css/start.css
@@ -1,18 +1,8 @@
 body {
   overflow: hidden; }
 
-.active {
-  height: 0% !important;
-  width: 0% !important;
-  -webkit-border-radius: 100% !important;
-          border-radius: 100% !important; }
-
 #start_page {
   background: #f4ea48;
-  overflow: hidden;
-  -webkit-transition: 0.3s linear;
-  -o-transition: 0.3s linear;
-  transition: 0.3s linear;
   margin-top: -1px;
   display: -webkit-box;
   display: -webkit-flex;
@@ -21,8 +11,7 @@ body {
   position: absolute;
   z-index: 2;
   width: 100%;
-  -webkit-border-radius: 0;
-          border-radius: 0;
+  height: 100%;
   left: 50%;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
