--- a/portfolio/CSA/app/css/start.css
+++ b/portfolio/CSA/app/css/start.css
@@ -1,8 +1,18 @@
 body {
   overflow: hidden; }
 
+.active {
+  height: 0% !important;
+  width: 0% !important;
+  -webkit-border-radius: 100% !important;
+          border-radius: 100% !important; }
+
 #start_page {
   background: #f4ea48;
+  overflow: hidden;
+  -webkit-transition: 0.3s linear;
+  -o-transition: 0.3s linear;
+  transition: 0.3s linear;
   margin-top: -1px;
   display: -webkit-box;
   display: -webkit-flex;
@@ -11,7 +21,8 @@ body {
   position: absolute;
   z-index: 2;
   width: 100%;
-  height: 100%;
+  -webkit-border-radius: 0;
+          border-radius: 0;
   left: 50%;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
@@ -77,7 +88,16 @@ body {
 
 @media screen and (max-width: 1025px) {
   #start_page .container {
-    min-height: 568px; } }
+    min-height: 568px; }
+  #start_page {
+    position: relative;
+    left: 0;
+    top: 0;
+    -webkit-transform: translate(0, 0);
+        -ms-transform: translate(0, 0);
+            transform: translate(0, 0); }
+  body {
+    overflow: auto; } }
 
 @media screen and (max-width: 480px) {
   #start_page .block_logo {
