--- a/portfolio/CSA/app/scss/start.scss
+++ b/portfolio/CSA/app/scss/start.scss
@@ -1,16 +1,21 @@
-.active {
-}
 body {
     overflow: hidden;
 }
+.active {
+    height: 0% !important;
+    width: 0% !important;
+    border-radius: 100% !important;
+}
 #start_page {
     background: #f4ea48;
+    overflow: hidden;
+    transition: 0.3s linear;
     margin-top: -1px;
     display: flex;
     position: absolute;
     z-index: 2;
     width: 100%;
-    height: 100%;
+    border-radius: 0;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
@@ -73,6 +78,15 @@ body {
 @media screen and (max-width: 1025px) {
     #start_page .container {
         min-height: 568px;
+    }
+    #start_page {
+        position: relative;
+        left: 0;
+        top: 0;
+        transform: translate(0, 0);
+    }
+    body {
+        overflow: auto;
     }
 }
 
