--- a/portfolio/CSA/app/css/start.css
+++ b/portfolio/CSA/app/css/start.css
@@ -2,7 +2,6 @@ body {
   overflow: hidden; }
 
 .active {
-  height: 0% !important;
   width: 0% !important;
   -webkit-border-radius: 100% !important;
           border-radius: 100% !important; }
@@ -21,19 +20,22 @@ body {
   position: absolute;
   z-index: 2;
   width: 100%;
-  -webkit-border-radius: 0;
-          border-radius: 0;
   left: 50%;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
       -ms-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%); }
+  #start_page::before {
+    content: "";
+    display: block;
+    padding-top: 100%; }
   #start_page .content {
     position: absolute;
-    left: 0;
     top: 0;
-    width: 100%;
-    height: 100%; }
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto; }
   #start_page .block_logo {
     width: 40em;
     height: 40em;
