--- a/portfolio/CSA/app/scss/start.scss
+++ b/portfolio/CSA/app/scss/start.scss
@@ -1,11 +1,12 @@
 body {
     overflow: hidden;
 }
+
 .active {
-    height: 0% !important;
     width: 0% !important;
     border-radius: 100% !important;
 }
+
 #start_page {
     background: #f4ea48;
     overflow: hidden;
@@ -15,16 +16,21 @@ body {
     position: absolute;
     z-index: 2;
     width: 100%;
-    border-radius: 0;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+    &::before {
+        content: "";
+        display: block;
+        padding-top: 100%;
+    }
     .content {
         position: absolute;
-        left: 0;
         top: 0;
-        width: 100%;
-        height: 100%;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
     }
     .block_logo {
         width: 40em;
@@ -35,10 +41,10 @@ body {
         margin-left: -20em;
         margin-top: -20em;
         .logo_content {
-               position: relative;
-               height: 100%;
-               margin: 0 auto;
-               max-width: 100%;
+            position: relative;
+            height: 100%;
+            margin: 0 auto;
+            max-width: 100%;
         }
         .logo_center {
             background: url(../img/center_logo.png) no-repeat center center;
