--- a/portfolio/CSA/app/css/start.css
+++ b/portfolio/CSA/app/css/start.css
@@ -2,7 +2,7 @@ body {
   overflow: hidden; }
 
 .active {
-  width: 0% !important;
+  width: 0%;
   -webkit-border-radius: 100% !important;
           border-radius: 100% !important; }
 
