--- a/portfolio/CSA/app/css/common.css
+++ b/portfolio/CSA/app/css/common.css
@@ -63,7 +63,7 @@
 
 body {
   font-size: 10px;
-  background: #040306; }
+  background: #0f0f0f; }
 
 .body_active {
   position: fixed;
@@ -236,7 +236,10 @@ body {
   left: 0;
   top: 5%;
   width: 100%;
-  z-index: 1000; }
+  z-index: 1000;
+  -webkit-transition: .3s ease;
+  -o-transition: .3s ease;
+  transition: .3s ease; }
   #header_top .container .header_top {
     display: -webkit-box;
     display: -webkit-flex;
@@ -283,12 +286,18 @@ body {
         font: 1.8em "HelveticaNeueCyrBold";
         text-transform: uppercase; }
 
+.header_top_last {
+  top: -100% !important; }
+
 #header_nav {
   position: absolute;
   width: 100%;
   bottom: 0;
   left: 0;
-  z-index: 1000; }
+  z-index: 1000;
+  -webkit-transition: .3s ease;
+  -o-transition: .3s ease;
+  transition: .3s ease; }
   #header_nav .line_bottom {
     position: absolute;
     bottom: 0;
@@ -410,6 +419,10 @@ body {
             font: 1.8em "HelveticaNeueCyrLight";
             color: #000;
             line-height: 0.9em; }
+
+.header_nav_last {
+  bottom: -webkit-calc(100% - 55px) !important;
+  bottom: calc(100% - 55px) !important; }
 
 #header_top .container .header_top_transformed .logo a {
   background: url(../img/logo_header_second.svg);
