--- a/portfolio/Barbershop/app/scss/projects.scss
+++ b/portfolio/Barbershop/app/scss/projects.scss
@@ -146,6 +146,13 @@
     }
 }
 
+@media screen and (min-width: 1520px) {
+      #projects .container {
+        min-height: 876px;
+      }
+}
+
+
 @media screen and (max-width: 1200px) {
 }
 
