--- a/portfolio/Barbershop/app/css/common.css
+++ b/portfolio/Barbershop/app/css/common.css
@@ -51,7 +51,7 @@ body {
 
 .container {
   min-width: 320px;
-  max-width: 1200px;
+  max-width: 1480px;
   margin: 0 auto;
   padding: 0 15px; }
 
@@ -356,6 +356,14 @@ p {
         color: #c6c6c6;
         padding: 0 1em;
         text-align: center; }
+
+@media screen and (min-width: 1520px) {
+  body {
+    font-size: 4px; } }
+
+@media screen and (max-width: 1519px) {
+  .container {
+    max-width: 1200px; } }
 
 @media screen and (min-width: 1400px) {
   .bg_topgun .bg {
