--- a/portfolio/Barbershop/app/css/main.css
+++ b/portfolio/Barbershop/app/css/main.css
@@ -446,6 +446,16 @@
         width: 25em;
         margin: 0 3em; }
 
+@media screen and (min-width: 1520px) {
+  #home .container {
+    min-height: 876px;
+    overflow: hidden; } }
+
+@media screen and (max-width: 1519px) {
+  #home .container .tab_content .moscow_page .tab_content_block h2,
+  #home .container .tab_content .spb_page .tab_content_block h2 {
+    padding-top: 6em; } }
+
 @media screen and (max-width: 1200px) {
   #home .container {
     min-height: 624px; }
