--- a/portfolio/Barbershop/app/scss/_media.scss
+++ b/portfolio/Barbershop/app/scss/_media.scss
@@ -1,3 +1,15 @@
+@media screen and (min-width: 1520px) {
+	body {
+	  	font-size: 4px;
+	  }
+}
+
+@media screen and (max-width: 1519px) {
+   	.container {
+		max-width: 1200px;
+	}
+}
+
 @media screen and (min-width: 1400px) {
 	.bg_topgun .bg {
 		width: 1370px;
