--- a/portfolio/Barbershop/app/scss/projects.scss
+++ b/portfolio/Barbershop/app/scss/projects.scss
@@ -148,7 +148,10 @@
 
 @media screen and (min-width: 1520px) {
       #projects .container {
-        min-height: 876px;
+        min-height: 1020px;
+      }
+      #projects .container .home_page_projects .page_content .bottom_projects .projects_content {
+        font-size: 6.3px;
       }
 }
 
